--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -806,7 +806,7 @@ workflows:
           name: Store build artifacts (dev)
           requires:
             - Build app - Linux (dev)
-            - Build app - MacOS (dev)
+            # - Build app - MacOS (dev)
             - Build app - Windows (dev)
 
       # build and release electron app (stage)
