--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -694,6 +694,18 @@ jobs:
             applicationVersion=$(jq -r '.version' redisinsight/package.json)
 
             aws s3 cp release/ s3://${AWS_BUCKET_NAME}/private/${applicationVersion} --recursive --exclude "*.json"
+  release-aws-test:
+    executor: linux-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run:
+          name: publish
+          command: |
+            rm release/._* ||:
+            applicationVersion=$(jq -r '.version' redisinsight/package.json)
+            aws s3 cp release/ s3://${AWS_BUCKET_NAME_TEST}/public/dev-releases/${applicationVersion}/${CIRCLE_BUILD_NUM} --recursive --exclude "*.json"
 
   publish-prod-aws:
     executor: linux-executor
@@ -852,6 +864,12 @@ workflows:
           requires: *buildReq
       - store-build-artifacts:
           name: Store build artifacts
+          requires:
+            - Build app - Linux
+            - Build app - MacOS
+            - Build app - Windows
+      - release-aws-test:
+          name: Release AWS test
           requires:
             - Build app - Linux
             - Build app - MacOS
